--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -1,16 +1,7 @@
 mixin menu-toggle()
-	+b.toggle-menu-mobile--js.d-lg-none
+	+b.toggle-menu-mobile--js
 		span
-mixin mob-mnu()
-	-
-		//- let path = require('path');
-		//- let fs = require('fs');
-		//- var requestURL = 'top-nav.json';
-		//- var request = new XMLHttpRequest();
-		//- request.open('GET', requestURL);
-		//- request.responseType = 'json';
-		//- let dataJson = JSON.parse(json);
-	//- h1= dataJson['lala'] 
+mixin mob-mnu() 
 	+b.menu-mobile--js
 		+b.toggle-menu-mobile--js
 			span
@@ -19,15 +10,16 @@ mixin mob-mnu()
 	//  мобильное меню
 mixin top-nav() 
 	// start top-nav
-	+b.top-nav.block-with-lazy
-		.container
-			.row
-				.col.order-lg-0.order-last
-					.menu-mobile.menu-mobile--js
-						.menu-mobile__inner
-							+menu-toggle()
-							+mnu()
-					
-				.col-auto.d-lg-none
-					+menu-toggle()
+	+b.top-nav 
+		.row
+			.col-auto
+				+menu-toggle()
+			.col
+				a(href="/")
+					img(src="img/svg/logo.svg", alt="") 
+			.col-auto
+				+e.lang Eng
+			.col-auto
+				+b.btn-search 
+					+icon("search")
 	// end top-nav
