--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -25,6 +25,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "./node_modules/bootstrap/scss/functions";
 @import "vars"; 
 @import "./node_modules/bootstrap/scss/variables";
+@import "./node_modules/bootstrap/scss/maps";
 @import "./node_modules/bootstrap/scss/mixins";
 @import "./node_modules/bootstrap/scss/utilities";
 
@@ -33,7 +34,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "./node_modules/bootstrap/scss/reboot";
 @import "./node_modules/bootstrap/scss/type";
 // @import "./node_modules/bootstrap/scss/images";
-@import "./node_modules/bootstrap/scss/containers";
+// @import "./node_modules/bootstrap/scss/containers";
 @import "./node_modules/bootstrap/scss/grid";
 // @import "./node_modules/bootstrap/scss/tables";
 @import "./node_modules/bootstrap/scss/forms";
@@ -59,8 +60,8 @@ $output-bourbon-deprecation-warnings: false;
 // @import "./node_modules/bootstrap/scss/carousel";
 // @import "./node_modules/bootstrap/scss/spinners";
 // @import "./node_modules/bootstrap/scss/offcanvas";
-// @import "./node_modules/bootstrap/scss/offcanvas";
 // @import "./node_modules/bootstrap/scss/placeholders";
+
 // Helpers
 @import "./node_modules/bootstrap/scss/helpers";
 
@@ -113,6 +114,13 @@ $output-bourbon-deprecation-warnings: false;
 
 @import '../pug/blocks/header/_header.scss';
 @import '../pug/blocks/footer/_footer.scss';
+
+
+@import '../pug/blocks/sNews/_sNews';
+@import '../pug/blocks/sEvents/_sEvents';
+@import '../pug/blocks/sWays/_sWays';
+@import '../pug/blocks/sTrust/_sTrust';
+@import '../pug/blocks/sJoin/_sJoin'; 
 
 @import "media"; // Всегда в конце
 
