--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,17 +1,16 @@
 .top-nav {
-	// background: svg-load('../svg/check.svg',  stroke=$primary); 
-	// 
-	@include media-breakpoint-up(xl) {
-		background-color: #000;
-		border: 1px solid #000;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 1000;
+	color: var(--color, #fff);
+	&__lang{
+		font-size: rem(14);
 	}
-
-	@include media-breakpoint-up(lg) {
-		background-color: red;
-
-	}
-	p{
-		@include ell();
+	.row{
+		align-items: center;
+		--bs-gutter-x: #{rem(17)};
 	}
 
 	@include media-breakpoint-up(md) {}
@@ -47,3 +46,9 @@
 }
 
 
+.btn-search {
+	.icon{
+		font-size: rem(24);
+	}
+	padding-right: rem(16);
+}
