--- a/sourse/pug/blocks/sWays/_sWays.pug
+++ b/sourse/pug/blocks/sWays/_sWays.pug
@@ -9,7 +9,7 @@ mixin sWays(data)
 						.tabs__btn Управление цепочками поставок
 						.tabs__btn Взаимоотношения  с&nbsp;клиентами и&nbsp;клиентский опыт
 						.tabs__btn Предиктивная аналитика
-						.tabs__line
+						//- .tabs__line
 				.tabs__wrap.col-md-7
 					mixin tab(t)
 						.tabs__content&attributes(attributes)
