--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -1,7 +1,7 @@
 // start .headerBlock
 .headerBlock { 
 	min-height: 100vh; 
-	background-color: #000000; 
+	// background-color: #000000; 
 	position: relative;
 	z-index: 2;
 	display: flex;
