--- a/sourse/pug/blocks/sEvents/_sEvents.scss
+++ b/sourse/pug/blocks/sEvents/_sEvents.scss
@@ -3,7 +3,7 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
-	background-color: $body-color;
+	// background-color: $body-color;
 	position: relative;
 	z-index: 4;
 	@include media-breakpoint-up(xl) {
