--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -3,8 +3,8 @@
 	--animate-delay: 1.2s;
 	
 	// --bs-body-font-size: #{$em-base};
-	@include media-breakpoint-up(md) {
-		--bs-body-font-size: #{$em-base};
+	@include media-breakpoint-up(xl) {
+		--bs-body-font-size: calc(#{$em-base}   + .12vw + .12vh);
 
 		--sPT: #{rem(94)};
 		--sPB: #{rem(94)};
