--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -7,6 +7,10 @@
 	fill: currentColor;
 }
 
+.icon-arrow-right {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-arrrow-right {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(40,8)*1em;
@@ -27,6 +31,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-facebook {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
@@ -35,13 +43,17 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-linkedin {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-search {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
 .icon-telegram {
-	font-size:math.div(16,10)*1rem;
-	width: math.div(16,16)*1em;
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
 }
 .icon-viber {
 	font-size:math.div(16,10)*1rem;
@@ -51,7 +63,11 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
-.icon-whatsapp {
-	font-size:math.div(16,10)*1rem;
-	width: math.div(16,16)*1em;
+.icon-whatsApp {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-youtube {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
 }
