--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,8 +1,129 @@
-.footer {
-		
-	margin-top: auto;
+.footer { 
+	background: #08080B;
+	color: #fff;
+	h4{
+		margin-bottom: rem(4);
+	}
+	p{
+		font-weight: 300;
+		opacity: 0.5;
+		font-size: rem(18);
+	}
+	&__block{
 
+		padding-top: rem(32);
+		padding-bottom: rem(32);
+	}
+
+	.row{
+		--bs-gutter-x: #{rem(48)};
+		@include media-breakpoint-up(lg){
+
+			--bs-gutter-y: #{rem(48)};
+		}
+		--bs-gutter-y: #{rem(16)};
+
+	}
+	.form-wrap{
+		position: relative;
+		@include media-breakpoint-down(lg) {
+
+			border-bottom: 1px solid rgba(#E3E7EC, .2);
+			padding-top: rem(16); 
+		}
+		&__input-wrap{
+			// --sp-y: #{$input-padding-y};
+			 --fz: #{rem(18)};
+
+		}
+		&__btn{
+			z-index: 4;
+			color: #fff;
+			padding: 0;
+			.icon{
+				font-size: rem(24);
+			}
+			position: absolute;
+			right: 0;
+			top: rem(4);
+			background: none !important;
+			box-shadow: none !important;
+			border: none !important ;
+		}
+		&__input{
+			font-size: rem(18);
+		}
+	}
+	&__col{
+		@include media-breakpoint-down(lg){
+			br{
+				display: none;
+			}
+		}
+	}
+	// 	&:nth-child(3),
+	// 	&:nth-child(4),
+	// 	&:nth-child(5){
+	// 		order: -1;
+
+	// 	}
+	// }
+	// &__col-contact{
+	// 	// order: 2;
+	// }
+	
+	// &__col-soc{
+	// 	order: 5;
+	// }
+
+	&__title{
+			font-weight: 600;
+			margin-bottom: rem(11);
+			// font-size: rem(18);
+	}
+	&__text{
+		font-weight: 300;
+	}
+
+	&__email,
+	&__tel{
+		@include rfs(24px);
+		font-weight: 500;
+		color: #fff !important;
+	}
+
+	&__contact{
+		@include media-breakpoint-down(lg) {
+
+			border-top: 1px solid rgba(#E3E7EC, .2);
+			padding-top: rem(16);
+			margin-top: 16px;
+		}
+		@include media-breakpoint-up(lg) {
+
+			text-align: right;
+			margin-bottom: rem(60);
+		}
+		margin-bottom: rem(20);
+	}
+	&__block--footer{
+		border-top: 1px solid rgba(#E3E7EC, .2);
+		font-size: rem(13);
+		> * {
+			opacity: 0.3;
+		}
+		a{
+			color: #fff !important;
+			font-weight: 300;
+			svg{
+				margin-right: rem(10);
+			}
+		}
+	}
 // 
+@include media-breakpoint-down(md) {
+	padding-bottom: 50px;
+}
 @include media-breakpoint-up(xl) {}
 
 @include media-breakpoint-up(lg) {}
