--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -1,37 +1,125 @@
 .form-wrap{
- 	&__input-wrap{
-			// @extend .form-group;
-			
+	&__input-wrap{
+		 // @extend .form-group;
+		 position: relative;
+		 margin-bottom: rem(24);
+		 --sp-y: #{$input-padding-y};
+		 --fz: #{$input-font-size};
+	 }
+	 &__btn{
+		 
+	 }
+	 &__input{
+		 // @extend .form-control;
+	 //  outline: 0 !important;
+	 border-top: none;
+	 border-left: none;
+	 border-right: none;
+		resize: none;
+		&::placeholder {
+	 // 		color: rgba(#05141F, .5);
+			 opacity: 0 !important	;
 		}
-		&__input{
-			// @extend .form-control;
-		//  outline: 0 !important;
-		 resize: none;
- 	}
- 	&__btn{
- 		cursor: pointer;
- 	}
- 	label{
- 		width: 100%;
- 		display: block;
- 	}
+	}
+	&__btn{
+		cursor: pointer;
+	}
+	label{
+		width: 100%;
+		display: block;
+	}
+ &__input-title{
+	 position: absolute;
+	 // padding-left: $input-padding-x;
+	 left: $input-padding-x;
+	 top: var(--sp-y); 
+	 font-size: var(--fz);
+	 color: rgba(#fff,  .5); 
+	 transform-origin: left ;
+	 pointer-events: none;
+	 font-weight: $input-font-weight;
+	 @include mt;
+	 max-width: calc(100% - #{$input-padding-x});
+ }
+ &__input	{
+	 padding-top: calc(var(--sp-y) * 1.5);
+	 padding-bottom: calc(var(--sp-y) * .5);
+	 &:-webkit-autofill ,
+	 &:focus, 
+	 &:not(:placeholder-shown){
+		 &:not(textarea) {
+			 // box-shadow:  0px 3px 0px  $primary;
+		 }
+	 }
+	 &:-webkit-autofill ,
+	 &:focus, 
+	 &:not(:placeholder-shown), 
+	 &.form-select  {
+		 & ~ .form-wrap__input-title{
+			//  color: #846951;
+			 transform: scale(.8) translateY(-90%) ; 
+		 }
+	 }
+ }
+
+ &__policy{
+		font-size: rem(12px);
+		margin-bottom: rem(40);
+		a{
+			color: currentColor;
+			border-bottom: 1px solid;
+		}
+ }
 }
 
 
 .parsley-error{
-	border-image: none;
-	border: 2px solid  red !important;
-	color: red;
-	outline: 0 !important;
-	 
+ border-image: none;
+ border: 2px solid  red !important;
+ color: red;
+ outline: 0 !important;
+	
 }
 .parsley-success{
-	border: 2px solid  #00d600 !important;
+ border: 2px solid  #00d600 !important;
 
 }
 .parsley-errors-list{
-	color: red;
+ color: red;
 }
+
+// .form-control{
+// 	&:not(textarea){
+
+// 		border-left: none;
+// 		border-right: none;
+// 		border-top: none;
+// 	}
+// }
+// .form-group{
+// 	position: relative;
+// 	input{
+	 
+// 	}
+// 	padding-top:  var(--input-sp-top);
+// 	margin-bottom: 24px;
+// }
+
+
+// .input-btn-wrap{
+// 	position: relative;	
+// }
+// .input-btn{
+// 	position: absolute;
+// 	right: 0;
+// 	top: 27px;
+// 	cursor: pointer;
+// 	&.show{
+// 		.path-line{
+// 			stroke:none !important;
+// 		}
+// 	}
+// }
 
 // 
 @include media-breakpoint-up(xl) {}
@@ -77,13 +165,13 @@
 
 }
 .form-check-label{
-	
+ 
 }
 
 // .custom-input{
 // 	display: block;
 // 	margin: auto;
-	 
+	
 // 	margin-bottom: rem(20);
 // 	cursor: pointer;
 // 	position: relative;
@@ -119,13 +207,13 @@
 
 // 	&__input:checked + &__lab{
 // 		background-color: $success;
-		 
+		
 // 		&::after{
-	
+ 
 // 			opacity: 1;
 // 		}
 // 	}
- 
+
 // }
 
 
@@ -148,19 +236,19 @@
 
 
 input[type='number'] {
-	-moz-appearance: textfield;
+ -moz-appearance: textfield;
 }
 
 select::-ms-expand {
-	display: none;
+ display: none;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	/* display: none; <- Crashes Chrome on hover */
-	-webkit-appearance: none;
-	margin: 0;
-	/* <-- Apparently some margin are still there even though it's hidden */
+ /* display: none; <- Crashes Chrome on hover */
+ -webkit-appearance: none;
+ margin: 0;
+ /* <-- Apparently some margin are still there even though it's hidden */
 }
 
 
@@ -172,7 +260,7 @@ input::-webkit-inner-spin-button {
 //  // height: auto;
 // 	&__select{
 // 		// background-color: transparent;
-		 
+		
 // 		box-shadow: none !important; 
 // 		background-image: none !important;
 // 		text-shadow: none;
@@ -187,7 +275,7 @@ input::-webkit-inner-spin-button {
 // 		border-radius: rem(6);
 // 		@include mt;
 // 		&:hover{
-		 
+		
 // 		}
 // 		&-text{
 // 			// width: 100% !important;
@@ -195,7 +283,7 @@ input::-webkit-inner-spin-button {
 // 		}
 // 	}	
 // 	&__select:hover &__trigger{
-		 
+		
 // 	}
 // 	&__trigger{
 // 		border: none;
@@ -209,19 +297,19 @@ input::-webkit-inner-spin-button {
 // 		background-repeat: no-repeat;
 // 		@include mt;
 // 		&:hover{
-			
+		 
 
 // 		}
 // 	}
 // 	&__trigger-arrow { 
 // 		border: none;
-    
+	 
 // }
 // li{
 // 	font-size: rem(16);
 // 	padding: em(10px) 10px em(10px);
 // 	&:hover {
-     
+		
 //     color: #fff;
 // }
 // }
@@ -229,15 +317,15 @@ input::-webkit-inner-spin-button {
 
 
 .select2-container--default .select2-selection--single {
-	@extend .form-select;
-	height: auto !important;
-	padding-left: rem(10);
+ @extend .form-select;
+ height: auto !important;
+ padding-left: rem(10);
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
-	padding: 0;
+ padding: 0;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-	display: none;
+ display: none;
 }
