--- a/sourse/pug/blocks/sJoin/_sJoin.scss
+++ b/sourse/pug/blocks/sJoin/_sJoin.scss
@@ -12,10 +12,22 @@
 		
 	}
 	&__col{
-
+			margin-left: auto;
+			min-height: 100vh;
+			display: flex;
+			flex-direction: column;
+			// align-items: center;
+		justify-content: center;
 	}
 	&__item{
 
+	}
+	h2{
+		text-transform: uppercase;
+	}
+	p{
+		font-weight: 300;
+		color: #08080B;
 	}
 
 	@include media-breakpoint-up(xl) {}
