--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -16,7 +16,7 @@ include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
 block variables
-	- let  mainPage= 'main-page' 
+	- let  mainPage= 'main-page page-fixed-video' 
 	- let  bg= null
 
 block title
@@ -24,16 +24,18 @@ block title
 	title= title
 block pagecontent
 	+mob-mnu()
-	
+	video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+			source(src='video/video.webm' type='video/webm')
+			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerBlock.bg-dark
-	+sNews
-	+sEvents.bg-dark
-	+sWays
-	+sTrust.bg-dark
-	+sJoin
-	+sForm().bg-dark
+	+headerBlock.bg-dark.section--vh
+	+sNews.bg-white.section--vh
+	+sEvents.bg-dark.section--vh
+	+sWays.bg-white.section--vh
+	+sTrust.bg-dark.section--vh
+	+sJoin.bg-white
+	+sForm().bg-dark.section--vh
 	+footer().bg-dark
       
 
