--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -17,5 +17,5 @@ mixin sForm()
 					.col-12
 						+input("Что вы хотите обсудить?",'textarea')
 				+policy
-				+e.btn.btn-primary(type="submit")  Отправить
+				+e.btn.btn.btn-primary(type="submit")  Отправить
 	// end sForm
