--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -2,6 +2,11 @@
 	position: fixed;
 	width: 100%;
 	left: 0;
+	@include mt;
+	&:not(.top-nav--dark) {
+		
+	}
+
 	@include media-breakpoint-down(md) {
 		bottom: 0;
 	}
@@ -10,7 +15,12 @@
 		top: 0;
 	}
 	z-index: 1000;
-	color: var(--color, #fff);
+	color: var(--top-nav-color, #fff);
+	&__logo{
+		[fill="white"]{
+			fill:  var(--top-nav-color, #fff) !important;
+		}
+	}
 	&__lang{
 		font-size: rem(14);
 	}
@@ -19,6 +29,11 @@
 		--bs-gutter-x: #{rem(17)};
 	}
 
+	&--light{
+		background-color: #fff;
+		--top-nav-color: #020407;
+		// background-color: #000;
+	}
 	@include media-breakpoint-up(md) {}
 
 	@include media-breakpoint-up(sm) {}
