--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -10,9 +10,15 @@ mixin allcss()
 	link(href=`css/main.min.css`, rel="stylesheet")
 
 mixin allcjs() 
+	link(href="libs/aos/aos.css", rel="stylesheet")
+
 	script(src="libs/jquery/jquery.min.js")
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
 	script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
+
+	script(src="libs/gsap/ScrollTrigger.min.js") 
+	script(src="libs/gsap/gsap.min.js") 
+	script(src="libs/aos/aos.js") 
 	//- script(src=`js/common.js?v=${version}`)
 	script(src=`js/common.js`)
