--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -111,6 +111,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sContent/_sContent.scss';
 @import '../pug/blocks/modal/_modal.scss';
 @import '../pug/blocks/headerBlock/_headerBlock.scss';
+@import '../pug/blocks/sAboutPerson/_sAboutPerson.scss';
 
 @import '../pug/blocks/header/_header.scss';
 @import '../pug/blocks/footer/_footer.scss';
