add circle animate

--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -2,7 +2,8 @@ mixin headerBlock()
 	// start headerBlock
 	+b.headerBlock.section#headerBlock&attributes(attributes)
 		
-
+		.animate-blur
+			img(src="img/@2x/webp/animate-blur.webp", alt="")
 		.container
 			+e.inner
 				h1 Открываем для компаний #[span новые возможности] в&nbsp;проектах цифровой&nbsp;трансформации
