--- a/sourse/pug/blocks/mixin-wrap/components/menu.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/menu.pug
@@ -2,12 +2,17 @@
 mixin mnu()
 	ul.menu(itemscope itemtype="http://schema.org/SiteNavigationElement")
 		each link in nav
-			li.menu-item(itemprop="item" ): a(href= link.url itemprop="url")= link.name
 			if link.subnav
 				li.menu-item.menu-item-has-children
-					a(href="#" itemprop="url") О нас
+					a(href="#" itemprop="url")!= link.name
 					ul.sub-menu
 						each sublink in link.subnav
-							li.menu-item(itemprop="item" ): a(href= sublink.url itemprop="url")= sublink.name
-
+							li.menu-item.menu-item-has-children(itemprop="item" )
+								a(href="#" itemprop="url")!= sublink.name
+								ul.sub-menu 
+									li.menu-item
+										a(href="#" itemprop="url")!= sublink.name
+								
+			else
+				li.menu-item(itemprop="item" ): a(href="#" itemprop="url")!= link.name
 //- menu
