--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -558,3 +558,22 @@ iframe {
 .bg-white{
 	z-index: 2;
 }
+
+.animate-blur{
+	animation: rotate 12s linear infinite;
+	position: absolute;
+	
+	img{
+		width: 100%;
+	}
+}
+
+
+@keyframes rotate {
+  0% { 
+    transform: rotate(0); 
+  }
+  100% { 
+    transform: rotate(360deg);
+  }
+ }
