--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -15,6 +15,7 @@
 	--sPB: #{rem(90 * .5)};
 	--sTPB: #{rem(40 * .5)};
 
+	--menu-w: #{rem(264px)};
 
 		--swiperArrowSize: #{rem(68)};
 		--swiperArrowPosition: calc(-1 * var(--swiperArrowSize) / 2);
@@ -29,7 +30,8 @@
 
 	--fancybox-bg: rgba(24, 24, 27, .77);
 
-
+	--chevron-r: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 8L6 13L5.3 12.3L9.6 8L5.3 3.7L6 3L11 8Z' fill='white'/%3E%3C/svg%3E%0A");
+	--chevron-r-primary: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 8L6 13L5.3 12.3L9.6 8L5.3 3.7L6 3L11 8Z' fill='#{$primary}'/%3E%3C/svg%3E%0A");
 	@include media-breakpoint-up(md) {
 		--c-g: #{rem(83)};
 	}
