--- a/sourse/pug/blocks/sAboutPerson/_sAboutPerson.scss
+++ b/sourse/pug/blocks/sAboutPerson/_sAboutPerson.scss
@@ -30,6 +30,10 @@
 		img {
 			width: 100%;
 			max-width: 100%;
+			@include media-breakpoint-up(lg) {
+				height: 100%;
+				object-fit: cover;
+			}
 		}
 	}
 	h2 {
@@ -47,6 +51,9 @@
 			padding-bottom: rem(40);
 			padding-left: rem(82);
 			padding-right: rem(82);
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 		}
 		padding-top: rem(24);
 		padding-left: rem(16);
