--- a/sourse/pug/pages/02-about.pug
+++ b/sourse/pug/pages/02-about.pug
@@ -9,7 +9,7 @@ include ../blocks/headerBlock/_headerBlock.pug
 //- include ../blocks/sContact/_sContact.pug 
 include ../blocks/sAboutPerson/_sAboutPerson.pug
 include ../blocks/sAboutCaption/_sAboutCaption.pug
-include ../blocks/sWays/_sWays.pug
+include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sTrust/_sTrust.pug
 include ../blocks/sJoin/_sJoin.pug 
 include ../blocks/sForm/_sForm.pug
@@ -30,8 +30,9 @@ block pagecontent
 	
 	+top-nav()
 	+headerBlockAbout.bg-dark.section--vh
-	+sAboutPerson.bg-white
-	+sAboutCaption.bg-white
+	+sAboutPerson.bg-white.section--vh
+	+sAboutCaption.bg-white.section--vh
+	+sStatus.bg-white.section--vh
 	//- +sNews.bg-white.section--vh
 	//- +sEvents.bg-dark.section--vh
 	//- +sWays.bg-white.section--vh
