--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -33,13 +33,19 @@
 	}
 	z-index: 2;
 	.animate-blur {
+		pointer-events: none;
 		position: absolute;
 		z-index: -1;
 		width: 130%;
 		top: 30%;
 		right: 40%;
+		&--right {
+			right: auto;
+			left: 40%;
+		}
 	}
 	&__bg {
+		pointer-events: none;
 		img {
 			width: 100%;
 			height: 100%;
@@ -51,7 +57,15 @@
 			display: none;
 		}
 		&--mob {
-			display: block;
+			@include media-breakpoint-down(lg) {
+				display: block;
+			}
+			display: none;
+		}
+	}
+	&--about {
+		.animate-blur {
+			z-index: 0;
 		}
 	}
 	@include media-breakpoint-up(xl) {
