--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -3,7 +3,7 @@ mixin menu-toggle()
 		span
 mixin mob-mnu() 
 	+b.menu-mobile--js
-		+b.toggle-menu-mobile--js
+		+b.toggle-menu-mobile--js.d-lg-none
 			span
 		+e.inner
 			+mnu()
