--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -5,6 +5,7 @@
 	position: relative;
 	z-index: 2;
 	display: flex;
+	overflow: hidden;
 	@include media-breakpoint-up(md) {
 		align-items: center;
 	}
@@ -35,8 +36,13 @@
 	.animate-blur {
 		position: absolute;
 		z-index: -1;
-		width: 130%;
-		top: 30%;
+		@include media-breakpoint-up(md) {
+			width: rem(1940);
+			top: 30%;
+			bottom: auto;
+		}
+		bottom: 30%;
+		width: rem(900);
 		right: 40%;
 	}
 	&__bg {
