--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -6,53 +6,148 @@
 		display: block;
 		color: #fff;
 	}
-	ul{ 
-		border-left: 1px solid rgba(255, 255, 255, .2);
-		@include mt;
-		transform-origin: left;
-		// transform: scaleX(0);
-		ul{
-			left: calc(var(--menu-w) * 2);
 
+		a{
+			&:hover{
+
+				color: $primary;
+			--bg: var(--chevron-r-primary);
+			}
 		}
 	}
-	.menu-item-has-children > a{
-		background-image: var(--chevron-r);
-		background-size: rem(16);
-		background-repeat: no-repeat;
-		background-position: calc(100% - #{rem(25)}) rem(14);
+
+	.sub-menu-wrap{ 
+		// &:not(.active) { 
+			position: fixed;
+			opacity: 0;
+			transform: translateX(-100%) scaleX(.9);
+			visibility: hidden;
+			will-change: transform;
+			@include mt;
+			transform-origin: left;
+			@include media-breakpoint-down(lg) {
+				.menu-item-has-children{
+					position: relative;
+					--t: #{rem(10)};
+					--l: #{rem(17)};
+					&::before{
+						content: '';
+						position: absolute;
+						top: var(--t);
+						left: var(--l);
+						width: rem(22);
+						height: rem(22);
+						background-color: $primary;
+						border-radius: 50%;
+					}
+				}
+				.menu-item-has-children> a{
+					padding-left: rem(52);
+
+					padding-right: rem(20);
+					background: none;
+					&::after,
+					&::before{
+						content: '';
+						position: absolute;
+						top: calc(var(--t)  + #{rem(10.5)});
+						left: calc(var(--l)  + #{rem(5)});
+						width: rem(12);
+						height: rem(1);
+						background-color: #000;
+					}
+					&::after{
+						transform: rotate(var(--rotate, 90deg));
+					}
+				}
+				.sub-menu-wrap{
+					transform-origin: top;
+					position: relative;
+					transform: scaleY(.8);
+					display: none;
+					height: auto;
+					padding-left: rem(26);
+					.sub-menu{
+						height: auto;
+						min-height: 1px;
+						padding-top: 0;
+						padding-bottom: 10px;
+						padding-top: 5px;
+					}
+				}
+			}
+			@include media-breakpoint-up(lg) {
+				border-left: 1px solid #525456;
+				z-index: -1;
+				left:100%; 
+			}
+			left: 0;
+			width: 100%;
+			top: 0;
+			// }
+			// transform: scaleX(0);
+			ul{
+				// z-index: -2;
+				// left: calc(var(--menu-w) * 2);
+				
+			}
+		}
+	.menu-item-has-children.active
+	.menu-item-has-children.active{
+		@include media-breakpoint-down(lg) {
+			.sub-menu-wrap{ 
+				transform: scaleY(1);
+				display: block;
+			}
+		}
 	}
-	// @include media-breakpoint-up(lg) {
-	
-		
-	// 	display: flex;
-	// 	text-align: center;
-	// 	@include roww(20px);
-	// 	flex-wrap: wrap;
-	// }
+	.menu-item-has-children.active{
+		--rotate: 0;
+		// z-index: 2;
+		&> a{
+			color: $primary;
+		--bg: var(--chevron-r-primary);
+		}
+		&>.sub-menu-wrap{
+		visibility: visible;
+		opacity: 1;
+		transform: translateX(0) scaleX(1);
 
-	// list-style: none;
-	// position: relative;
-	// margin-bottom: 0;
-	// max-width: 100%;
-	// li{
-		
-	// 	// margin-left: 0;
-	// 	// margin-right: 0;
-	// 	padding: 0;
-	// }
-	// a{
-	// 	display: block;
-	// 	padding: rem(20) calc(var(--bs-gutter-x) / 2);
-	// }
+	}
 }
-
-
+.menu-item-has-children > a{
+	background-image: var(--bg, var(--chevron-r));
+	background-size: rem(16);
+	background-repeat: no-repeat;
+	background-position: calc(100% - #{rem(25)}) rem(14);
+} 
+.menu-item-title{
+	color: $primary;
+	font-size: 24px;
+	font-weight: 300;
+	margin-bottom: 1px;
+	padding-left: 14px;
+}
+.menu-item-back{
+	position: absolute;
+	left: 0;
+	top: 0;
+	color: #fff;
+	font-size: 12px;
+	padding: 16px 12px;
+	.icon{
+		font-size: 16px;
+		margin-right: 4px;
+		position: relative;
+		top: rem(-2);
+	}
+}
 
 .toggle-menu-mobile {
 	--h: 1px;
 	--color: currentColor;
 	--position: calc(var(--h) * 5);
+	will-change: transform, background;
 
 
 	&.on span {
@@ -108,16 +203,25 @@
 
 	.menu-mobile {
 		position: fixed !important;
-		z-index: 999; 
+		@include media-breakpoint-up(lg) {
+			z-index: 999; 
+		}
+		z-index: 1200; 
 		
 		top: 0;
 		left: 0;
+		will-change: transform;
+		width: var(--menu-w);
 		// right: 0;
 		
 		&:not(.active){
+			
+			@include media-breakpoint-up(lg) {
 			transform: translate3d(-120%, 0,0);
-			--opacity: 0;
-			.toggle-menu-mobile{
+		}
+		transform: translate3d( 0,100%,0);
+		--opacity: 0;
+		.toggle-menu-mobile{
 				opacity: 0;
 			}
 		}
@@ -125,13 +229,11 @@
 		will-change: transform;
 
 		
-		.toggle-menu-mobile { 
-			margin-left: -15%;
+		.toggle-menu-mobile {  
 			position: absolute; 
-			left: 0;
-			right: auto;
+			right: 0;
 			color: #FFF;
-			top: 10px;
+			top: 0;
 			z-index: 9999; 
 			span:after,
 			span:before {
@@ -144,9 +246,13 @@
 			overflow-y: auto;
 			-webkit-overflow-scrolling: touch;
 			height: 100%;
-			@include mt(.3s);
-			transition-delay: .4s;
-			opacity: var(--opacity);
+			@include media-breakpoint-up(lg){
+				@include mt(.3s);
+				transition-delay: .4s;
+
+				opacity: var(--opacity);
+			}
+			
 		}
 
 		&.active { 
@@ -158,19 +264,24 @@
 
 		ul{
 			
-			height: calc(var(--vh, 1vh) * 100);
+			
 			padding-top: rem(56);
 			list-style: none;
-			width: var(--menu-w);
+			height: calc(var(--vh, 1vh) * 100);
+			
+			
+			
+
 			&:not(.menu) {
 
-				position: fixed;
+				// position: relative;
+				overflow-y: auto;
 			}
-			overflow-y: auto;
-			top: 0;
+			// overflow-y: auto;
+			
 			background: #0A0B0F;
 			min-height: 100%; 
-			left: var(--menu-w); 
+			
 		}
 	}
 // }
