--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -34,7 +34,7 @@ block pagecontent
 	+sEvents.bg-dark.section--vh
 	+sWays.bg-white.section--vh
 	+sTrust.bg-dark.section--vh
-	+sJoin.bg-white
+	+sJoin.bg-white.section--vh
 	+sForm().bg-dark.section--vh
 	+footer().bg-dark
       
