--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -14,8 +14,10 @@
 	--sPT: #{rem(80 * .5)};
 	--sPB: #{rem(90 * .5)};
 	--sTPB: #{rem(40 * .5)};
-
-	--menu-w: #{rem(264px)};
+	@include media-breakpoint-up(lg) {
+		--menu-w: #{rem(264px)};
+	}
+	--menu-w: 100%;
 
 		--swiperArrowSize: #{rem(68)};
 		--swiperArrowPosition: calc(-1 * var(--swiperArrowSize) / 2);
