--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -27,6 +27,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-chevron-left {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
+}
 .icon-chevron-right {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
