--- a/sourse/pug/blocks/sNews/_sNews.pug
+++ b/sourse/pug/blocks/sNews/_sNews.pug
@@ -47,12 +47,20 @@ mixin sNewsPressCenter(data)
 								.swiper-button-next
 									+icon('chevron-right')
 				.swiper-wrapper
-					- for (var x = 0; x < 3; x++)
+					- for (var x = 0; x < 6; x++)
 						+e.slide.swiper-slide
 							+newItem(`1`,`Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors`,`Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции`)
 						+e.slide.swiper-slide
 							+newItem(`2`,`«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов`,`Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.`)
 						+e.slide.swiper-slide
 							+newItem(`3`,`Онлайн-конференция «Инновационный день фармацевтических компаний 2021»`,`Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).`)
+					+e.slide.swiper-slide
+							+newItem(`1`,`Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors`,`Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции`)
+					+e.slide.swiper-slide
+						+newItem(`2`,`«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов`,`Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.`)
+					+e.slide.swiper-slide
+						+b.end-news-card
+							+e.title Перейти в раздел новости
+							+icon('arrrow-right')
 				.swiper-scrollbar
 	// end sNews
